force-app/main/default/objects/CAPI_Event_Notification__e/CAPI_Event_Notification__e.object-meta.xml
<CustomObject>
    <label>CAPI Event Notification</label>
    <pluralLabel>CAPI_Event_Notifications</pluralLabel>
</CustomObject>