force-app/main/default/objects/CAPI_Event_Notification__e/fields/ConversionEventHappened__c.field-meta.xml
<CustomField>
    <fullName>ConversionEventHappened__c</fullName>
    <label>ConversionEventHappened</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>