force-app/main/default/objects/CAPI_Event_Notification__e/fields/ConversionEventId__c.field-meta.xml
<CustomField>
    <fullName>ConversionEventId__c</fullName>
    <label>ConversionEventId</label>
    <length>255</length>
    <type>Text</type>
</CustomField>