force-app/main/default/objects/CAPI_Event_Notification__e/fields/Event_Name__c.field-meta.xml
<CustomField>
    <fullName>Event_Name__c</fullName>
    <label>Event Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>