force-app/main/default/objects/CAPI_Event_Notification__e/fields/MACV__c.field-meta.xml
<CustomField>
    <fullName>MACV__c</fullName>
    <label>MACV</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>